--- a/css/mobile.css
+++ b/css/mobile.css
@@ -2,6 +2,7 @@
 </html>
 @media mobile{
 	max-width:480px;
+	-webkit-device-pixel-ratio:1;
 }
 
 img, table, td, blockquote, code, pre, textarea, input, iframe, object, embed, video {
