--- a/css/mobile.css
+++ b/css/mobile.css
@@ -4,6 +4,10 @@
 	max-width:480px;
 }
 
+h1{
+ font-size:8vw;
+}
+
 img, table, td, blockquote, code, pre, textarea, input, iframe, object, embed, video {
     max-width: 100%;
 }
