--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,11 @@ para1{
 }
 
 tr,td{
- border:1px, solid, black;
+ border:1px solid black;
 }
 
 #titre{
- background-color: grey;
+ background-color: lightgrey;
 }
 
 #IUT{
