--- a/css/mobile.css
+++ b/css/mobile.css
@@ -11,4 +11,9 @@ h1{
 img, table, td, blockquote, code, pre, textarea, input, iframe, object, embed, video {
     max-width: 100%;
 }
+table{
+	display: block;
+	width:100%;
+	height: auto;
+}
 
