--- a/css/mobile.css
+++ b/css/mobile.css
@@ -11,8 +11,15 @@ h1{
 img, table,tr, td, blockquote, code, pre, textarea, input, iframe, object, embed, video {
     max-width: 100%;
 }
-table,tr,th,td{
+
+table,tr,thead, tbody,td{
 	display: block;
-	overflow-x:auto;
 }
 
+td{
+	position: relative;
+}
+
+td:before{
+	position:absolute;
+}
