--- a/Tp2/css/style.css
+++ b/Tp2/css/style.css
@@ -1,20 +1,16 @@
 body{
 	background-color:#FCBD49;
 }
-
 p{
 	text-align:justify;
 	font-size:1.1rem;
 }
-
 h1{
 	font-size:2.5rem;
 }
-
 ul{
 	list-style:none;
 }
-
 #header{
 	padding-bottom:1.0rem;
 	border-bottom:0.1rem solid black;
@@ -28,7 +24,7 @@ ul{
 	float:left;
 }
 
-/****titre du site*****/
+/****Logo-titre du site*****/
 #HND{
 	display:block;
 	width:20.0rem;
@@ -64,21 +60,11 @@ ul{
 	padding-top:1.0rem;
 }
 
-/*#Mercy{
-	padding-top:1.0rem;
-	padding-bottom:1.0rem;
-	max-width:100%;
-	width:100%;
-	margin-left:auto;
-	margin-right:auto;	
-}*/
-
 /****Competences****/
 #competences{
 	width:100%;
 	margin-bottom:5.0rem;
 }
-
 #competence1, #competence2, #competence3, #competence4{
 	display:inline-block;
 	text-align:center;
@@ -87,29 +73,25 @@ ul{
 	vertical-align:middle;
 	padding:0.0rem;;
 }
-
 #Arme1, #Arme2, #Ange, #Ulti{
 	width:7.0rem;
 }
-
 #Arme1{
 	margin-top:2.5rem;
 }
-
 #cad, #mis, #ang, #res{
 	color:#3d3b3f;
 	width:8.0rem;
 }
-
 #Dcad, #Dmis, #Dang, #Dres{
 	width:9.0rem;
 	text-align:center;
 }
+
 /*****Origine Géo+Formulaire*****/
 #part2{
 	width:100%;
 }
-
 #geo, #form{
 	display:inline-block;
 	margin:0.0rem;
@@ -119,11 +101,9 @@ ul{
 #geo{
 	border-right: 0.1rem solid black;
 }
-
 #titre{
 	text-align:left;
 }
-
 #map{
 	display:block;
 	padding-left:1.0rem;
@@ -136,33 +116,24 @@ ul{
 	margin-bottom:0.3rem;
 	margin-top:0.3rem;
 }
-/*#prenom, #date{
-	margin-right:4.0rem;
-}*/
-
 #prenom,#nom{
 	display:inline-block;
 }
-
 #ville, #date{
 	display:inline-block;
 }
-
 #prenom, #date{
 	width:40%;
 	float:left;
 }
-
 #nom, #ville{
 	width:40%;
 	float:right;
 }
-
 #message, #mail, #photo{
 	width:100%;
 	height:auto;
 }
-
 #ok{
 	float:right;
 	width:5.0rem;
@@ -172,9 +143,59 @@ ul{
 #footer{
 	border-top:0.1rem solid black;
 }
-
 #footer p{
 	float:right;
 	padding-right:1.5rem;
 }
-/*#FCBD49=couleur jaune owervatch*/
+/* Post-it: #FCBD49=couleur jaune owervatch*/
+
+
+
+/*****Responsive tablette****/
+@media screen and (max-width:800px){
+	max-width:80.0rem;
+	
+	p{
+		font-size:0.9rem;
+	}
+	
+	h1{
+		font-size:2.0rem;
+	}
+	
+	#titre{
+		font-size:0.9rem;
+	}
+	/*****centrer le Logo et le menu****/	
+	#case{
+		text-align:center;
+	}
+	
+	#LogoMercy, #case{
+		position:relative;
+		margin-left:auto;
+		margin-right:auto;
+		float:none;
+		text-align:center;
+	}
+	
+	/*****Supression du logo-titre*****/
+	#HND{
+		display:none;
+		visibility:hidden;
+	}
+
+	/*****Réarrangement du Formulaire*****/
+	
+	#prenom, #nom, #ville, #date,#message, #mail, #photo{
+		display:block;
+		width:100%;
+		float:none;
+	}
+}
+
+/*****Responsive Smartphone****/
+@media screen and (max-width:480px){
+	max-width:48.0rem;
+	
+}
